z-index issue

--- a/client/src/containers/LoginInfoBar/styles.css
+++ b/client/src/containers/LoginInfoBar/styles.css
@@ -9,7 +9,7 @@
   align-items: center;
   position: fixed;
   top: 0;
-  z-index: 50;
+  z-index: 0;
 }
 
 @media (max-width: 600px) {
